fix attempt to fix navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,3 @@
-html,
-body {
-  height: 100%;
-}
-
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-}
-
 header.main-header {
   margin: 30px 20px;
   border-bottom: 10px solid grey;
